# Opener-NetDoor

./: .dockerignore  .editorconfig  .env.example  .gitignore  .tool-versions  MVP_SCOPE.md  Makefile  README.md  WORKSPACE_POLICY.md  docker-compose.yml  go.work  go.work.sum  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
.gocache/: trim.txt
.gocache/00/: 0011491b8353168666f4b7f21979720446d84dcaed6bae847f3243c1ab763222-a  003a81cc00a6c4a1e402d06785f86e3cef4ed5c4e2a011806f4645d8ed7bd8b3-a
.gocache/01/: 01149a8951d9d40f290a0ef40504d12fe966c9011b6cfed233258205d4dd8ea7-a  012a3b527ffbb34d693b66c013691242307ad91244baa6cfec63d2d8e4bc82f3-a  014b4d7b6d638478a890318d8bc35b408a24a0b889dd370c3d44d3e42883f446-a  01a1a742477273f0c08cf52463ef6ba06eed8f7379cb398fe8f7fcd89b0c3ad0-a  01af0978cb8f93698bec8bb78d0ae0964b749c82e8ea58e38764305b95aa9110-a
.gocache/02/: 021ae691d78b740b1de59875ee6a0b1f471b55e3fc649e16c3336b2a9acaab6c-a  021fa6b0e129d9e8a2101a7ac234e2d4bddcf888bceaff898e1333aae1efe0a9-a  02339cbde4982290f0af1853d80e06ac17f39b11386a675ef26b6c926e06de35-a  025e3e11fbe0d20bdc284a17983bcd28ee3c923f30a0b67693bb67fc6fc8c40a-a  027f3feb0bde04495d145db8ab8fb5734f695a6cfeeb6e168f84bd5ff3475620-a  (+6 more)
apps/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/manager-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/manager-desktop/src-tauri/src/: main.rs
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml  install.sh  uninstall.sh  upgrade.sh
docs/: README.md
(+4451 files in other folders)
