[package]
name = "opener-netdoor-desktop-client"
version = "0.1.0"
description = "Opener NetDoor Desktop Client"
authors = ["Opener NetDoor Team"]
license = "Apache-2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
tauri = { version = "2.2.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

