[package]
name = "opener-netdoor-manager"
version = "0.2.0"
description = "Opener NetDoor Manager Desktop"
authors = ["Opener NetDoor Team"]
license = "Apache-2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
tauri = { version = "2.2.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
